tests/ui/cilk/borrows_live_before_sync.stderr
error[E0597]: `s` does not live long enough
  --> $DIR/borrows_live_before_sync.rs:16:24
   |
LL |     let mut s = String::from("hello");
   |         ----- binding `s` declared here
LL |     cilk_spawn {
LL |         println!("{}", &s);
   |                        ^^ borrowed value does not live long enough
...
LL | }
   | - `s` dropped here while still borrowed

error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
  --> $DIR/borrows_live_before_sync.rs:18:5
   |
LL |         println!("{}", &s);
   |                        -- immutable borrow occurs here
LL |     };
LL |     s.push_str(" world");
   |     ^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0502, E0597.
For more information about an error, try `rustc --explain E0502`.
